<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/connectbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/connect_button"
        android:onClick="connect" />

    <Button
        android:id="@+id/settingbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/connectbutton"
        android:layout_marginTop="25dp"
        android:onClick="setting"
        android:text="@string/setting_button" />

    <Button
        android:id="@+id/exitbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settingbutton"
        android:layout_marginTop="25dp"
        android:onClick="exit"
        android:text="@string/exit_button" />

</RelativeLayout>