<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.matthew.bulat.monitorapplication.HostChoiceActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/button_manual_address"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_manual_address"
        android:layout_alignParentRight="true"
        android:onClick="connectToHost"
        android:text="@string/button_manual_address" />

    <EditText
        android:id="@+id/editText_manual_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_manual_address"
        android:ems="10" />

    <TextView
        android:id="@+id/textView_manual_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_manual_address"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/title_field_manual_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_nfc_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_manual_address"
        android:layout_alignRight="@+id/button_manual_address"
        android:layout_below="@+id/editText_manual_address"
        android:layout_marginTop="54dp"
        android:onClick="connectToNFCHost"
        android:text="@string/button_nfc_address" />

    <Button
        android:id="@+id/button_qr_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_nfc_address"
        android:layout_alignRight="@+id/button_nfc_address"
        android:layout_below="@+id/button_nfc_address"
        android:layout_marginTop="28dp"
        android:onClick="connectToQRHost"
        android:text="@string/button_qr_address" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText_manual_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />

</RelativeLayout>