<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context="com.matthew.bulat.monitorapplication.GraphActivity$PlaceholderFragment" >

    <RelativeLayout
	    android:id="@+id/title1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:text="@string/graph_cpu"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/graph1"
        android:layout_width="fill_parent"
        android:layout_height="250dip"
        android:layout_alignLeft="@+id/title1"
	    android:layout_below="@id/title1"
        android:orientation="vertical" >

    </RelativeLayout>
    <RelativeLayout
	    android:id="@+id/title2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/graph1"
        android:layout_below="@id/graph1"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:text="@string/graph_ram"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>	
    <RelativeLayout
        android:id="@+id/graph2"
        android:layout_width="fill_parent"
        android:layout_height="250dip"
        android:layout_alignLeft="@+id/title2"
        android:layout_below="@id/title2"
        android:orientation="vertical" >

    </RelativeLayout>
    <RelativeLayout
	    android:id="@+id/title3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/graph2"
        android:layout_below="@id/graph2"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:text="@string/graph_upload"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
	<RelativeLayout
        android:id="@+id/graph3"
        android:layout_width="fill_parent"
        android:layout_height="250dip"
        android:layout_alignLeft="@+id/title3"
        android:layout_below="@id/title3"
        android:orientation="vertical" >
    </RelativeLayout>
    <RelativeLayout
	    android:id="@+id/title4"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/graph3"
        android:layout_below="@id/graph3"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:text="@string/graph_download"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
     <RelativeLayout
        android:id="@+id/graph4"
        android:layout_width="fill_parent"
        android:layout_height="250dip"
        android:layout_alignLeft="@+id/title4"
        android:layout_below="@id/title4"
        android:orientation="vertical" >
    </RelativeLayout>

</RelativeLayout>